# tc-otel

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  _typos.toml  audit.toml  config.example.json  config.mqtt.docker.json  config.mqtt.example.json  config.tcp.docker.json  config.tcp.example.json  deny.toml  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  fjl75jgpelofualltudgpf9hspptmr8d  manifest  oumjdnesofhnuqmunk2kno9jjmdlbh6e.darc  snocqnmloclk5jlal7aqfgtmji8ohpqm.darc  typos.toml
.cargo/: audit.toml
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build.yml  integration.yml  release.yml  security.yml
.runtime/: session_id
captures/: decode_ams.py  diff_bytes.py  diff_reqs.py
charts/tc-otel/: Chart.yaml  values.yaml
charts/tc-otel/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/tc-otel/tests/: configmap_test.yaml  deployment_test.yaml  service_test.yaml  serviceaccount_test.yaml
crates/tc-otel-ads/: Cargo.toml
crates/tc-otel-ads/src/: ads_client.rs  ams.rs  ams_server.rs  connection_manager.rs  custom_metric_notifier.rs  custom_metric_poller.rs  diagnostics.rs  diagnostics_observer.rs  diagnostics_poller.rs  diagnostics_push.rs  dispatcher.rs  error.rs  frame.rs  health_metrics.rs  lib.rs  listener.rs  mqtt_health_metrics.rs  parser.rs  protocol.rs  registry.rs  router.rs  symbol.rs  symbol_handle.rs  transport.rs
crates/tc-otel-ads/src/transport/: mqtt.rs  tcp.rs
crates/tc-otel-ads/tests/: dispatcher_mqtt.rs  dispatcher_tcp.rs  push_diagnostics_integration.rs  push_metric_aggregate_integration.rs
crates/tc-otel-benches/: Cargo.toml  README.md
crates/tc-otel-benches/benches/: ads_parser.rs  end_to_end.rs  log_entry_creation.rs  otel_conversion.rs
crates/tc-otel-benches/src/: lib.rs
crates/tc-otel-client/: Cargo.toml
crates/tc-otel-client/src/: browse.rs  cache.rs  client.rs  error.rs  lib.rs  notify.rs  poll.rs
crates/tc-otel-client/tests/: browse_parser.rs  cache_behavior.rs  notify_loop.rs  poll_loop.rs
crates/tc-otel-core/: Cargo.toml
crates/tc-otel-core/src/: config.rs  config_watcher.rs  diagnostics.rs  error.rs  formatter.rs  lib.rs  metric_mapper.rs  models.rs  subscriptions.rs
crates/tc-otel-export/: Cargo.toml
crates/tc-otel-export/src/: error.rs  exporter.rs  grpc.rs  lib.rs  mapping.rs  receiver.rs
crates/tc-otel-integration-tests/: Cargo.toml
crates/tc-otel-integration-tests/tests/: ads_connection_health.rs  custom_metric_mapping.rs  custom_metrics_client_e2e.rs  custom_metrics_config.rs  custom_metrics_notification.rs  custom_metrics_polling.rs  e2e_flow.rs  error_handling.rs  log_trace_correlation.rs  logs_e2e_regression.rs  metric_export.rs  metric_sampling.rs  module_integration.rs  plc_system_metrics.rs  security_connection_limits.rs  security_message_limits.rs  security_receiver_tls.rs  span_distributed_tracing.rs  span_motion_tracing.rs  span_recipe_tracing.rs  span_state_machine_tracing.rs  symbol_discovery.rs  test_traces_e2e.rs  test_traces_scaffold_e2e.rs  trace_wire_format.rs
crates/tc-otel-service/: Cargo.toml
crates/tc-otel-service/src/: api.rs  client_bridge.rs  config_watcher.rs  cycle_time.rs  dashboard.html  diagnostics_bridge.rs  dispatcher.rs  lib.rs  main.rs  service.rs  span_dispatcher.rs  system_metrics.rs  trace_dispatcher.rs  web.rs
crates/tc-otel-service/src/web/ui/: app.js  index.html  styles.css
crates/tc-otel-service/src/web/ui/lib/: charts.js  domains.js  util.js
crates/tc-otel-service/src/web/ui/views/: config.js  dashboard.js  symbols.js
docs/: ads-diagnostics-integration-plan.md  architecture.md  critical-review-gastown-era.md  custom-metrics-client.md  push-diagnostics-setup.md  push-diagnostics-wire-format.md  push-metrics-wire-format.md  router.md  sample-timestamps-plan.md  traces-design.md  traces-instance-tracer-design.md  traces-internals.md  traces-propagation.md  traces-setup.md  v2-real-frame-analysis.md
docs/reviews/: pillars-2026-04.md
examples/: README.md
examples/config/: minimal.json  mqtt.json  tcp-docker.json  tcp.json
examples/otel-collector/: config.yml
examples/twincat/: StaticRoutes.xml
observability/: otel-collector-config.yml
observability/grafana/dashboards/: tc-otel-diagnostics.json  tc-otel-fb-metrics.json
observability/grafana/provisioning/dashboards/: default.yml
observability/grafana/provisioning/datasources/: tempo.yml  victoria-logs.yml  victoria-traces.yml
observability/jaeger-ui/: Dockerfile  default.conf
observability/tempo/: tempo.yaml
plc/mbc_log4tc_diag/: README.md  ST_PushDiagHeader.TcDUT
scripts/: run-runtime-tests.sh
source/TwinCat_Examples/GettingStarted/A_SimpleLogMessage/: A_SimpleLogMessage.plcproj
source/TwinCat_Examples/GettingStarted/B_LogMessageWithArg/: B_LogMessageWithArg.plcproj
source/TwinCat_Examples/GettingStarted/C_LogWithLogger/: C_LogWithLogger.plcproj
source/TwinCat_Examples/GettingStarted/D_LogWithContext/: D_LogWithContext.plcproj
source/TwinCat_Examples/GettingStarted/E_StructuredLogging/: E_StructuredLogging.plcproj
source/TwinCat_Examples/graylog/: README.md
source/TwinCat_Examples/influx_with_message/: README.md  appsettings.json
source/TwinCat_Lib/log4tc/: log4tc.sln  log4tc.~u
source/TwinCat_Lib/log4tc/log4tc/: TrialLicense.tclrs  log4tc.tsproj  log4tc.tsproj.bak
source/TwinCat_Lib/tc-otel/: .gitignore  tc-otel.sln
tc-otel-config/: config.json
tests/: integration_config.rs  integration_formatter.rs  integration_mapping.rs  integration_parser.rs  security_connection_limits.rs  security_message_limits.rs  security_receiver_tls.rs
tests/runtime/: config.mqtt.json  docker-compose.yml  mosquitto.conf  otel-collector-config.yml  static-routes-mqtt.xml  test_metrics_e2e.rs  test_mqtt_transport.rs
(+137 files in other folders)
