[workspace]
members = [
    "crates/tc-otel-core",
    "crates/tc-otel-ads",
    "crates/tc-otel-client",
    "crates/tc-otel-export",
    "crates/tc-otel-service",
    "crates/tc-otel-benches",
    "crates/tc-otel-integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tc-otel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/pirminbleiker/tc-otel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# OTLP protobuf (types hand-rolled in tc-otel-export/src/grpc.rs)
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# HTTP/Web
axum = "0.7"
hyper = "1.0"
hyper-util = "0.1"
http = "1.0"
tower = "0.4"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Internal crates
tc-otel-core = { path = "crates/tc-otel-core" }
tc-otel-ads = { path = "crates/tc-otel-ads" }
tc-otel-client = { path = "crates/tc-otel-client" }
tc-otel-export = { path = "crates/tc-otel-export" }
tc-otel-service = { path = "crates/tc-otel-service" }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
bytes = "1.5"
parking_lot = "0.12"

# Testing
mockall = "0.14"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
