[package]
name = "tc-otel-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance benchmarks for tc-otel TwinCAT observability bridge"
publish = false

[dependencies]
tc-otel-core.workspace = true
tc-otel-ads.workspace = true
tc-otel-export.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ads_parser"
harness = false

[[bench]]
name = "log_entry_creation"
harness = false

[[bench]]
name = "otel_conversion"
harness = false

[[bench]]
name = "end_to_end"
harness = false
