[package]
name = "tc-otel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data models and types for tc-otel TwinCAT observability bridge"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
regex = "1.10"
schemars = { version = "0.8", features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
