[package]
name = "tc-otel-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integration and end-to-end tests for tc-otel TwinCAT observability bridge"

[features]
# Enable this with --features live-plc to compile the E2E test that talks to a
# real TwinCAT runtime. Off in CI because the runner has no PLC.
live-plc = ["tc-otel-client", "tc-otel-service/client-bridge"]

[dependencies]
tc-otel-core.workspace = true
tc-otel-ads.workspace = true
tc-otel-client = { path = "../tc-otel-client", optional = true }
tc-otel-export.workspace = true
tc-otel-service = { path = "../tc-otel-service" }

tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
bytes.workspace = true
hex = "0.4"

# Testing utilities
mockall.workspace = true

# Async utilities for testing
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3.8"
